gac_sb/objects/Annual_time_sheet__c.object
<CustomObject>
    <description>ESP/BR_ permet de rentrer les consultants ainsi que leurs salaire horaire sur la mission.
Objet disponible uniquement au manager</description>
    <fields>
        <fullName>Comentario_del_time_sheet__c</fullName>
        <label>Comentario del time sheet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Consultant_type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adriano Araujo</fullName>
                </value>
                <value>
                    <fullName>Aitor LEGORBURU</fullName>
                </value>
                <value>
                    <fullName>Alberto VERDU</fullName>
                </value>
                <value>
                    <fullName>Alexis URCELAY</fullName>
                </value>
                <value>
                    <fullName>Alvaro PALACIOS</fullName>
                </value>
                <value>
                    <fullName>Ana Julia VECINO</fullName>
                </value>
                <value>
                    <fullName>Antonio LEAL</fullName>
                </value>
                <value>
                    <fullName>Aranzazu OLAZABAL</fullName>
                </value>
                <value>
                    <fullName>Camila Donizette</fullName>
                </value>
                <value>
                    <fullName>Daniel PASCUAL GONZALEZ</fullName>
                </value>
                <value>
                    <fullName>Danilo Pereira</fullName>
                </value>
                <value>
                    <fullName>Débora Beraldo</fullName>
                </value>
                <value>
                    <fullName>Edwin Lima</fullName>
                </value>
                <value>
                    <fullName>Fabiane Gorge</fullName>
                </value>
                <value>
                    <fullName>Fernanda Falcheti</fullName>
                </value>
                <value>
                    <fullName>Fernando Schaffer</fullName>
                </value>
                <value>
                    <fullName>Gemma SANCHIZ</fullName>
                </value>
                <value>
                    <fullName>Gilson Kohs</fullName>
                </value>
                <value>
                    <fullName>Gregory Correa</fullName>
                </value>
                <value>
                    <fullName>Igor GONZALEZ</fullName>
                </value>
                <value>
                    <fullName>Imanol BERASALUZE</fullName>
                </value>
                <value>
                    <fullName>Itziar ONAINDIA</fullName>
                </value>
                <value>
                    <fullName>Jon Andoni DOCANDO</fullName>
                </value>
                <value>
                    <fullName>Jon ARRATE</fullName>
                </value>
                <value>
                    <fullName>Jose Antonio CANO</fullName>
                </value>
                <value>
                    <fullName>Jose Antonio MARTINEZ</fullName>
                </value>
                <value>
                    <fullName>Juliana Alves</fullName>
                </value>
                <value>
                    <fullName>Kizkitza AURREKOETXEA</fullName>
                </value>
                <value>
                    <fullName>Laura G.GASTAÑAGA</fullName>
                </value>
                <value>
                    <fullName>Laura GARCIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consultant_type__c</fullName>
        <label>Consultant type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Técnico</fullName>
                </value>
                <value>
                    <fullName>Seguimiento</fullName>
                </value>
                <value>
                    <fullName>Europeos</fullName>
                </value>
                <value>
                    <fullName>External consultant</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>Contábil</fullName>
                </value>
                <value>
                    <fullName>Estagiário</fullName>
                </value>
                <value>
                    <fullName>Coordenador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly_cost__c</fullName>
        <label>Hourly cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mes__c</fullName>
        <description>Mois concerné par la TS au Brésil</description>
        <label>Mês</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Janeiro</fullName>
                </value>
                <value>
                    <fullName>Fevereiro</fullName>
                </value>
                <value>
                    <fullName>Março</fullName>
                </value>
                <value>
                    <fullName>Abril</fullName>
                </value>
                <value>
                    <fullName>Maio</fullName>
                </value>
                <value>
                    <fullName>Junho</fullName>
                </value>
                <value>
                    <fullName>Julho</fullName>
                </value>
                <value>
                    <fullName>Agosto</fullName>
                </value>
                <value>
                    <fullName>Setembro</fullName>
                </value>
                <value>
                    <fullName>Outubro</fullName>
                </value>
                <value>
                    <fullName>Novembro</fullName>
                </value>
                <value>
                    <fullName>Dezembro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mission_concerned__c</fullName>
        <label>Mission concerned</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Annual time sheet</relationshipLabel>
        <relationshipName>Annual_time_sheet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>National_Grants__c</fullName>
        <label>National Grants</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>+ INNOVA 2013</fullName>
                </value>
                <value>
                    <fullName>AEESD</fullName>
                </value>
                <value>
                    <fullName>APOYO A LA INNOVACION</fullName>
                </value>
                <value>
                    <fullName>BASQUE INDUSTRY 4.0</fullName>
                </value>
                <value>
                    <fullName>BERRIKERTU</fullName>
                </value>
                <value>
                    <fullName>BIZKAIA CREATIVA</fullName>
                </value>
                <value>
                    <fullName>CDTI</fullName>
                </value>
                <value>
                    <fullName>CENTROS</fullName>
                </value>
                <value>
                    <fullName>DDFF</fullName>
                </value>
                <value>
                    <fullName>DFA</fullName>
                </value>
                <value>
                    <fullName>DFB</fullName>
                </value>
                <value>
                    <fullName>DFG</fullName>
                </value>
                <value>
                    <fullName>EEA GRANTS</fullName>
                </value>
                <value>
                    <fullName>EFICIENCIA ENERG</fullName>
                </value>
                <value>
                    <fullName>ELKARTEK</fullName>
                </value>
                <value>
                    <fullName>ETORGAI</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>EUROPEOS</fullName>
                </value>
                <value>
                    <fullName>EVALUACIONES</fullName>
                </value>
                <value>
                    <fullName>EVE</fullName>
                </value>
                <value>
                    <fullName>FIJO MENSUAL</fullName>
                </value>
                <value>
                    <fullName>FIJO TRIMESTRIAL</fullName>
                </value>
                <value>
                    <fullName>GAITEK</fullName>
                </value>
                <value>
                    <fullName>GAUZATU</fullName>
                </value>
                <value>
                    <fullName>GLOBAL LEHIAN</fullName>
                </value>
                <value>
                    <fullName>HAZITEK</fullName>
                </value>
                <value>
                    <fullName>I+D+I AGRARIO</fullName>
                </value>
                <value>
                    <fullName>IKERTU</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIA DIGITALA</fullName>
                </value>
                <value>
                    <fullName>INNCORPORA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_hour_done__c</fullName>
        <label>Number of estimated hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_hours_really_done__c</fullName>
        <label>Number of hours really done</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planification_de_facturation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planification de facturation</label>
        <referenceTo>Prevision_de_facturation__c</referenceTo>
        <relationshipLabel>Annual time sheet</relationshipLabel>
        <relationshipName>Annual_time_sheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proyecto_Concepto2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proyecto / Concepto</label>
        <referenceTo>Proyecto_Concepto__c</referenceTo>
        <relationshipLabel>Annual time sheet</relationshipLabel>
        <relationshipName>Annual_time_sheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proyecto_Concepto__c</fullName>
        <label>Proyecto / Concepto (name)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_cost__c</fullName>
        <formula>Number_of_hour_done__c * Hourly_cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total estimated cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_real_cost__c</fullName>
        <formula>Number_of_hours_really_done__c  * Hourly_cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total real cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_concerned__c</fullName>
        <label>Year concerned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Annual time sheet</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Annual time sheet name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual time sheet</pluralLabel>
    <recordTypes>
        <fullName>Annual_Time_Sheet_BR</fullName>
        <active>true</active>
        <description>BR - Annual Time Sheet LDB</description>
        <label>Annual Time Sheet LDB</label>
    </recordTypes>
    <recordTypes>
        <fullName>Annual_Time_Sheet_CSL</fullName>
        <active>true</active>
        <description>BR - Annual Time Sheet CSL</description>
        <label>Annual Time Sheet CSL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Annual_Time_Sheet_ES</fullName>
        <active>true</active>
        <description>Annual Time Sheet ES</description>
        <label>Annual Time Sheet ES</label>
    </recordTypes>
    <recordTypes>
        <fullName>Annual_Time_Sheet_FND</fullName>
        <active>true</active>
        <description>BR - Annual Time Sheet FND</description>
        <label>Annual Time Sheet FND</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>